--- a/content/pages/rules/privacy/312/index.adoc
+++ b/content/pages/rules/privacy/312/index.adoc
@@ -27,15 +27,20 @@ processing of their information.
 
 == References
 
-. [[r1]] link:https://gdpr-info.eu/art-7-gdpr/[GDPR. Art. 7: Conditions for consent.(3).]
+. [[r1]] link:https://eur-lex.europa.eu/legal-content/EN/TXT/PDF/?uri=CELEX:02002L0058-20091219[Directive 2002/58/EC (amended by E-privacy Directive 2009/136/EC).
+Art. 6: Traffic data.(3)]
+Users or subscribers shall be given the possibility to withdraw their consent
+for the processing of traffic data at any time.
+
+. [[r2]] link:https://gdpr-info.eu/art-7-gdpr/[GDPR. Art. 7: Conditions for consent.(3).]
 The data subject shall have the right to withdraw his or her consent at any
 time.
 
-. [[r2]] link:https://gdpr-info.eu/art-18-gdpr/[GDPR. Art. 18: Right to restriction of processing.(1).]
+. [[r3]] link:https://gdpr-info.eu/art-18-gdpr/[GDPR. Art. 18: Right to restriction of processing.(1).]
 The data subject shall have the right to obtain from the controller restriction
 of processing.
 
-. [[r3]] link:https://gdpr-info.eu/art-21-gdpr/[GDPR. Art. 21: Right to object.(1).]
+. [[r4]] link:https://gdpr-info.eu/art-21-gdpr/[GDPR. Art. 21: Right to object.(1).]
 The data subject shall have the right to object,
 on grounds relating to his or her particular situation,
 at any time to processing of personal data concerning him or her.
