--- a/content/pages/rules/privacy/189/index.adoc
+++ b/content/pages/rules/privacy/189/index.adoc
@@ -8,16 +8,19 @@
 
 == Requirement
 
-The system must specify the purpose
-of personal data collection (**OECD.9**, **ISACA.G31.3.**).
+The system must specify the purpose of personal data collection
+(**OECD.9**, **ISACA.G31.3.**),
+and it must do so before requesting the user's consent for the collection.
+
 
 == Description
 
 Applications usually request or collect personal data from their users.
 Such collection must be properly justified according to the legal requirements
 of each nation.
-These reasons must be accessible for the user in a clear manner and in an easy
-to understand language.
+These reasons must be accessible for the user in a clear manner, in an easy
+to understand language and before requesting their consent for the collection
+and processing of data.
 
 == Findings
 
@@ -25,33 +28,50 @@ to understand language.
 
 == References
 
-. [[r1]] link:https://gdpr-info.eu/art-13-gdpr/[GDPR. Art. 13: Information to be provided where personal
+. [[r1]] link:https://eur-lex.europa.eu/legal-content/EN/TXT/PDF/?uri=CELEX:02002L0058-20091219[Directive 2002/58/EC (amended by E-privacy Directive 2009/136/EC).
+Art. 6: Traffic data.(4)]
+The service provider must inform the subscriber or user of the types of traffic
+data which are processed and of the duration of such processing for the
+purposes mentioned in paragraph 2 and,
+prior to obtaining consent,
+for the purposes mentioned in paragraph 3.
+
+. [[r2]] link:https://eur-lex.europa.eu/legal-content/EN/TXT/PDF/?uri=CELEX:02002L0058-20091219[Directive 2002/58/EC (amended by E-privacy Directive 2009/136/EC).
+Art. 9: Location data other than traffic data.(1)]
+The service provider must inform the users or subscribers,
+prior to obtaining their consent,
+of the type of location data other than traffic data which will be processed,
+of the purposes and duration of the processing
+and whether the data will be transmitted to a third party for the purpose of
+providing the value added service.
+
+. [[r3]] link:https://gdpr-info.eu/art-13-gdpr/[GDPR. Art. 13: Information to be provided where personal
 data are collected from the data subject.(1-3).]
 Where personal data relating to a data subject are collected from the data
 subject,
 the controller shall, at the time when personal data are obtained,
 provide the data subject with all of the following information.
 
-. [[r2]] link:https://gdpr-info.eu/art-14-gdpr/[GDPR. Art. 14: Information to be provided where personal
+. [[r4]] link:https://gdpr-info.eu/art-14-gdpr/[GDPR. Art. 14: Information to be provided where personal
 data have not been obtained from the data subject.(1-4).]
 Where personal data have not been obtained from the data subject,
 the controller shall provide the data subject with the following information.
 
-. [[r3]] link:https://gdpr-info.eu/art-30-gdpr/[GDPR. Art. 30: Records of processing activities.]
+. [[r5]] link:https://gdpr-info.eu/art-30-gdpr/[GDPR. Art. 30: Records of processing activities.]
 Each controller and, where applicable, the controller’s representative,
 shall maintain a record of processing activities under its responsibility.
 
-. [[r4]] link:https://gdpr-info.eu/recitals/no-39/[GDPR. Recital 39:  Principles of data processing].
+. [[r6]] link:https://gdpr-info.eu/recitals/no-39/[GDPR. Recital 39: Principles of data processing].
 It should be transparent to natural persons that personal data concerning them
 are collected, used, consulted or otherwise processed and to what extent
 the personal data are or will be processed.
 
-. [[r5]] link:https://gdpr-info.eu/recitals/no-40/[GDPR. Recital 40: Lawfulness of data processing].
+. [[r7]] link:https://gdpr-info.eu/recitals/no-40/[GDPR. Recital 40: Lawfulness of data processing].
 In order for processing to be lawful,
 personal data should be processed on the basis of the consent of the data
 subject concerned or some other legitimate basis.
 
-. [[r6]] link:https://gdpr-info.eu/recitals/no-45/[GDPR. Recital 45: Fulfillment of legal obligations].
+. [[r8]] link:https://gdpr-info.eu/recitals/no-45/[GDPR. Recital 45: Fulfillment of legal obligations].
 Where processing is carried out in accordance with a legal obligation to which
 the controller is subject, the processing should have a basis in Union or
 Member State law.
