--- a/content/pages/rules/data/181/index.adoc
+++ b/content/pages/rules/data/181/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/181/
 :category: data
 :description: This document contains the details of the security requirements related to the definition and management of data transmission in the organization. This requirement establishes the importance of using safe protocols to perform sensitive information transmission.
-:keywords: Transmission, Data, Protocols, Sensitive, Information, ASVS
+:keywords: Transmission, Data, Protocols, Information, ASVS, CWE
 :rules: yes
 
 = REQ.181 Transmit data using secure protocols
@@ -65,20 +65,49 @@ the transmitted information.
 
 == References
 
-. [[r1]] link:https://eur-lex.europa.eu/legal-content/EN/TXT/PDF/?uri=CELEX:02002L0058-20091219[Directive 2002/58/EC (amended by E-privacy Directive 2009/136/EC).
+. [[r1]] link:https://cwe.mitre.org/data/definitions/200.html[CWE-200: Exposure of Sensitive Information to an Unauthorized Actor]
+The product exposes sensitive information to an actor that is not explicitly
+authorized to have access to that information.
+
+. [[r2]] link:https://cwe.mitre.org/data/definitions/311.html[CWE-311: Missing Encryption of Sensitive Data]
+The software does not encrypt sensitive or critical information before storage
+or transmission.
+
+. [[r3]] link:https://cwe.mitre.org/data/definitions/319.html[CWE-319: Cleartext Transmission of Sensitive Information]
+The software transmits sensitive or security-critical data in cleartext in a
+communication channel that can be sniffed by unauthorized actors.
+
+. [[r4]] link:https://cwe.mitre.org/data/definitions/326.html[CWE-326: Inadequate Encryption Strength]
+The software stores or transmits sensitive data using an encryption scheme that
+is theoretically sound,
+but is not strong enough for the level of protection required.
+
+. [[r5]] link:https://cwe.mitre.org/data/definitions/598.html[CWE-598: Use of GET Request Method With Sensitive Query Strings]
+The web application uses the HTTP GET method to process a request and includes
+sensitive information in the query string of that request.
+
+. [[r6]] link:https://eur-lex.europa.eu/legal-content/EN/TXT/PDF/?uri=CELEX:02002L0058-20091219[Directive 2002/58/EC (amended by E-privacy Directive 2009/136/EC).
 Art. 4: Security of processing.(1a)]
 The measures referred to in paragraph 1 shall at least protect personal data
 stored or transmitted against accidental or unlawful destruction,
 accidental loss or alteration,
 and unauthorized or unlawful storage, processing, access or disclosure.
 
-. [[r2]] link:https://www.owasp.org/index.php/ASVS_V2_Authentication[OWASP-ASVS v3.1-2.16]
-Verify that all application data is transmitted
-over an encrypted channel (e.g. *TLS*).
+. [[r7]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V3.1 Client-side Data Protection.(3.1.1)]
+Verify the application never reveals session tokens in URL parameters or error
+messages.
 
-. [[r3]] link:https://www.owasp.org/index.php/ASVS_V9_Data_Protection[OWASP-ASVS v3.1-9.3]
-Verify that all sensitive data is sent to the server
-in the HTTP message body or headers
-(i.e., URL parameters are never used to send sensitive data).
+. [[r8]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V8.3 Sensitive Private Data.(8.3.1)]
+Verify that sensitive data is sent to the server in the HTTP message body or
+headers,
+and that query string parameters from any HTTP verb do not contain sensitive
+data.
 
-. [[r4]] link:https://pcinetwork.org/forum/index.php?threads/pci-dss-3-0-6-5-4-insecure-communications.660/[PCI 6.5.4 Insecure communications/transport layer protection]
+. [[r9]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V9.1 Communications Security Requirements.(9.1.1)]
+Verify that secured TLS is used for all client connectivity,
+and does not fall back to insecure or unencrypted protocols.
+
+. [[r10]] link:https://pcinetwork.org/forum/index.php?threads/pci-dss-3-0-6-5-4-insecure-communications.660/[PCI 6.5.4 Insecure communications/transport layer protection]
